--- a/ghost/i18n/locales/es/portal.json
+++ b/ghost/i18n/locales/es/portal.json
@@ -7,25 +7,25 @@
     "{{discount}}% discount": "{{discount}}% de descuento",
     "{{memberEmail}} will no longer receive {{newsletterName}} newsletter.": "{{memberEmail}} ya no va a recibir boletines de {{newsletterName}}.",
     "{{memberEmail}} will no longer receive emails when someone replies to your comments.": "{{memberEmail}} ya no va a recibir correos electrónicos cuando alguien responde a sus comentarios.",
-    "{{memberEmail}} will no longer receive this newsletter.": "{{memberEmail}} ya no va a recibir este bolentin.",
+    "{{memberEmail}} will no longer receive this newsletter.": "{{memberEmail}} ya no va a recibir esta newsletter.",
     "{{trialDays}} days free": "{{trialDays}} días gratis",
     "A login link has been sent to your inbox. If it doesn't arrive in 3 minutes, be sure to check your spam folder.": "Se ha enviado un enlace de inicio de sesión a tu correo. Si no llega en 3 minutos, revisa tu carpeta de spam.",
     "Account": "Cuenta",
     "Account settings": "Configuración de la cuenta",
     "After a free trial ends, you will be charged the regular price for the tier you've chosen. You can always cancel before then.": "Después de que finalice el período de prueba gratuito, se te cobrará el precio regular del nivel que hayas elegido. Siempre puedes cancelar antes de eso.",
     "Already a member?": "¿Ya eres miembro?",
-    "An unexpected error occured. Please try again or <a>contact support</a> if the error persists.": "Un error inesperado ha ocurrido. Por favor intente de nuevo o <a>contacte soporte técnico</a> si el error persiste.",
+    "An unexpected error occured. Please try again or <a>contact support</a> if the error persists.": "Ha ocurrido un error inesperado. Por favor, intente de nuevo o <a>contacte soporte técnico</a> si el error persiste.",
     "Back": "Atrás",
     "Back to Log in": "Volver al inicio de sesión",
     "Billing info": "Informacion de pago",
-    "Black Friday": "Viernes negro",
+    "Black Friday": "Black Friday",
     "Cancel anytime.": "Cancelacion en cualquier momento.",
     "Cancel subscription": "Cancelar suscripción",
     "Cancellation reason": "Razón de cancelación",
     "Change": "Cambiar",
     "Check spam & promotions folders": "Compruebe la carpeta de correo basura y promociones",
     "Check with your mail provider": "Compruebe con su proveedor de correo",
-    "Choose": "elija",
+    "Choose": "Elige",
     "Choose a different plan": "Elige un plan diferente",
     "Choose your newsletters": "Elige tus boletines",
     "Click here to retry": "Haga click aqui para reintentar",
@@ -43,7 +43,7 @@
     "Create a new contact": "Crea un nuevo contacto",
     "Current plan": "Plan actual",
     "Delete account": "Eliminar cuenta",
-    "Didn't mean to do this? Manage your preferences <button>here</button>.": "¿No quisiste hacer esto? Puedes gestionar tus preferencias <button>acá</button>.",
+    "Didn't mean to do this? Manage your preferences <button>here</button>.": "¿No quisiste hacer esto? Puedes gestionar tus preferencias <button>aquí</button>.",
     "Don't have an account?": "¿No tienes una cuenta?",
     "Edit": "Editar",
     "Email": "Correo electrónico",
@@ -64,11 +64,11 @@
     "Help! I'm not receiving emails": "¡Ayuda! No estoy recibiendo correos electronicos",
     "If a newsletter is flagged as spam, emails are automatically disabled for that address to make sure you no longer receive any unwanted messages.": "Si un correo es marcado como spam, los correos electrónicos son automáticamente deshabilitados para esa dirección de correo para asegurarse que usted no reciba ningún correo indeseado.",
     "If the spam complaint was accidental, or you would like to begin receiving emails again, you can resubscribe to emails by clicking the button on the previous screen.": "Si la denuncia de spam fue accidental, o si quiere recibir los correos electrónicos de nuevo, puede volver a suscribirse a los correos haciendo click en el botón de la pantalla anterior.",
-    "If you cancel your subscription now, you will continue to have access until {{periodEnd}}.": "Si cancela su suscripción ahora, continuara con acceso hasta el {{periodEnd}}.",
+    "If you cancel your subscription now, you will continue to have access until {{periodEnd}}.": "Si cancela su suscripción ahora, continuará con acceso hasta el {{periodEnd}}.",
     "If you have a corporate or government email account, reach out to your IT department and ask them to allow emails to be received from {{senderEmail}}": "Si usted tiene un correo electrónico de una corporación o del gobierno, puede contactarse con el departamento de TI y solicitar que se le permita recibir correos de {{senderEmail}}",
     "If you would like to start receiving emails again, the best next steps are to check your email address on file for any issues and then click resubscribe on the previous screen.": "",
     "If you're not receiving the email newsletter you've subscribed to, here are few things to check.": "Si no estas recibiendo los boletines informativos a los que se suscribió, estas son algunas cosas que puede revisar.",
-    "If you've completed all these checks and you're still not receiving emails, you can reach out to get support by contacting {{supportAddress}}.": "Si ha comprobado todo y aun así no esta recibiendo los correos electrónicos, puede comunicarse con soporte técnico contactando {{supportAddress}}.",
+    "If you've completed all these checks and you're still not receiving emails, you can reach out to get support by contacting {{supportAddress}}.": "Si ha comprobado todo y aun así no está recibiendo los correos electrónicos, puede comunicarse con soporte técnico contactando {{supportAddress}}.",
     "In the event a permanent failure is received when attempting to send a newsletter, emails will be disabled on the account.": "",
     "In your email client add {{senderEmail}} to your contacts list. This signals to your mail provider that emails sent from this address should be trusted.": "",
     "Less like this": "Menos como esto",
